--- a/website/templates/style.css
+++ b/website/templates/style.css
@@ -501,6 +501,7 @@ a.navbar-brand:hover {
 
 .pdm-color-patch {
 	width: 20px;
+	min-width: 20px;
 	height: 20px;
 	border-radius: 16px;
 	border: 4px solid;
@@ -678,4 +679,85 @@ a.navbar-brand:hover {
 		-webkit-transform: rotate(180deg);
 		transform: rotate(180deg);
 	}
+}
+
+
+/*
+ * Material design switch
+ */
+
+ /* The switch - the box around the slider */
+.switch {
+	position: relative;
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+}
+
+/* Hide default HTML checkbox */
+.switch input {
+	opacity: 0;
+	width: 0;
+	height: 0;
+}
+
+.switch-text {
+	flex-grow: 1;
+	text-align: left;
+}
+
+.switch-box {
+	position: relative;
+	display: inline-block;
+	width: 36px;
+	min-width: 36px;
+	height: 20px;
+}
+
+/* The slider */
+.slider {
+	position: absolute;
+	cursor: pointer;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	background-color: #ccc;
+	-webkit-transition: .4s;
+	transition: .4s;
+}
+
+.slider:before {
+	position: absolute;
+	content: "";
+	height: 14px;
+	width: 14px;
+	left: 3px;
+	bottom: 3px;
+	background-color: white;
+	-webkit-transition: .4s;
+	transition: .4s;
+}
+
+input:checked + .slider {
+	background-color: #2196F3;
+}
+
+input:focus + .slider {
+	box-shadow: 0 0 1px #2196F3;
+}
+
+input:checked + .slider:before {
+	-webkit-transform: translateX(16px);
+	-ms-transform: translateX(16px);
+	transform: translateX(16px);
+}
+
+/* Rounded sliders */
+.slider.round {
+	border-radius: 34px;
+}
+
+.slider.round:before {
+	border-radius: 50%;
 }
