Empty var fix (closes #97), show default word cloud if not logged in

--- a/website/templates/components/map_sidebar_postcontrib.pug
+++ b/website/templates/components/map_sidebar_postcontrib.pug
@@ -20,7 +20,7 @@ script.
 	// Send instant contribution
 	function addContribution(type) {
 		// Old project : show nothing specific
-		if(!#{isActive}) {
+		if(!#{isActive || "false"}) {
 			postContribBadgesDom.classList.add("d-none");
 		}
 		// With auth : save contribution in DB, display badges
