--- a/website/templates/pages/issues.pug
+++ b/website/templates/pages/issues.pug
@@ -8,6 +8,7 @@ html(lang="fr")
 		script(src="/turf.js")
 		script.
 			const booleanContains = turf.default;
+		include ../components/pictures.pug
 
 	body(data-swipe-ignore="true")
 		include ../components/issues_navbar.pug
