--- a/website/templates/components/issues_list.pug
+++ b/website/templates/components/issues_list.pug
@@ -28,29 +28,6 @@ script.
 		}
 	}
 
-	// Look for pictures to display extracted from notes text
-	// Regexes from https://github.com/ENT8R/NotesReview/blob/main/js/linkify.js
-	const IMAGE_HOSTING_REGEX = [
-		[ /http(?:s)?:\/\/upload\.wikimedia\.org\/wikipedia\/(.+?)\/(?:thumb\/)?(\w\/\w\w)\/(.+?\.(?:jpg|jpeg|png))(?:\/.+?\.(?:jpg|jpeg|png))?/gi, 'https://upload.wikimedia.org/wikipedia/$1/thumb/$2/$3/300px-$3' ],
-		[ /http(?:s)?:\/\/commons\.wikimedia\.org\/wiki\/File:(.+?\.(?:jpg|jpeg|png|svg))/gi, 'https://commons.wikimedia.org/wiki/Special:FilePath/$1?width=300' ],
-		[ /http(?:s)?:\/\/(?:www\.)?mapillary\.com\/map\/im\/(\w+)/gi, 'https://images.mapillary.com/$1/thumb-320.jpg' ]
-	];
-
-	function searchPicturesInNote(issue) {
-		const regex = /<a href="(.+?(\.(jpg|png|jpeg|gif)|mapillary\.com\/map\/im\/\w+))"/gi;
-		return issue.properties.comments.map(c => [...c.html.matchAll(regex)])
-			.flat()
-			.map(m => m[1])
-			.map(m => {
-				for(let rgx of IMAGE_HOSTING_REGEX) {
-					if(rgx[0].test(m)) {
-						return m.replace(rgx[0], rgx[1]);
-					}
-				}
-				return m;
-			});
-	}
-
 	function findHashtagsInNote(issue) {
 		const regex = /\s(\#[a-zA-Z0-9]+)/g;
 		return [...issue.properties.comments[0].html.matchAll(regex)].map(m => m[1].toLowerCase());
@@ -100,45 +77,7 @@ script.
 		issueDom.appendChild(issueUserDom);
 
 		// Image
-		const pictures = searchPicturesInNote(issue);
-		if(pictures.length > 0) {
-			if(pictures.length === 1) {
-				const issueImgDom = document.createElement("img");
-				issueImgDom.classList.add("card-img", "card-img-center");
-				issueImgDom.src = pictures[0];
-				issueImgDom.setAttribute("loading", "lazy");
-				issueImgDom.setAttribute("data-filter", "picture");
-				issueDom.appendChild(issueImgDom);
-			}
-			else {
-				const issueImgCarousel = document.createElement("div");
-				issueImgCarousel.setAttribute("data-filter", "picture");
-				issueImgCarousel.id = "carouselImg"+pdmIssueId;
-				issueImgCarousel.classList.add("carousel", "slide");
-
-				issueImgCarousel.innerHTML = `<a class="carousel-control-prev" href="#${issueImgCarousel.id}" role="button" data-slide="prev">
-						<span class="carousel-control-prev-icon" aria-hidden="true"></span>
-						<span class="sr-only">Précédent</span>
-					</a>
-					<a class="carousel-control-next" href="#${issueImgCarousel.id}" role="button" data-slide="next">
-						<span class="carousel-control-next-icon" aria-hidden="true"></span>
-						<span class="sr-only">Suivant</span>
-					</a>`;
-
-				const carouselIndicators = document.createElement("ol");
-				carouselIndicators.classList.add("carousel-indicators");
-				carouselIndicators.innerHTML = pictures.map((p,i) => `<li data-target="#${issueImgCarousel.id}" data-slide-to="${i}" class="${i === 0 ? "active" : ""}"></li>`).join("");
-				issueImgCarousel.appendChild(carouselIndicators);
-
-				const carouselInner = document.createElement("div");
-				carouselInner.classList.add("carousel-inner");
-				carouselInner.innerHTML = pictures.map((p,i) => `<div class="carousel-item ${i === 0 ? "active" : ""}"><img src="${p}" loading="lazy" class="d-block w-100" /></div>`).join("");
-				issueImgCarousel.appendChild(carouselInner);
-
-				issueDom.appendChild(issueImgCarousel);
-				new BSN.Carousel(issueImgCarousel, { interval: false });
-			}
-		}
+		createPicturesCarousel(issueDom, searchPicturesInNote(issue), { id: "carouselImg"+pdmIssueId });
 
 		// Body
 		const issueBodyDom = document.createElement("div");
